# goetta-finance-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: SECURITY_AUDIT_2026-05.md
src/goetta_finance/: __main__.py  cli.py  collector.py  config.py  daemon.py  errors.py  goals.py  importer.py  mcp_config.py  models.py  server.py  simplefin.py  transfers.py  validators.py
src/goetta_finance/store/: __init__.py  duckdb_store.py
src/goetta_finance/store/migrations/: 0001_init.sql  0002_manual_accounts.sql  0003_liabilities.sql  0004_categorization.sql  0005_hidden_accounts.sql  0006_spending_flag.sql  0007_demote_default_rules.sql  0008_goals.sql  0009_rule_amount_bounds.sql  0010_drop_secondary_indexes.sql  0011_drop_override_transactions_fk.sql  0012_transfer_links.sql  0013_category_match_cache.sql  0014_contribution_goals.sql  0015_recurring_contributions.sql
src/goetta_finance/tools/: _serialize.py  accounts.py  balance_history.py  categorize.py  goals.py  set_account_balance.py  spending_by_category.py  sql_query.py  sync_now.py  transactions.py  transfer_links.py  uncategorized.py
src/goetta_finance/web/: aggregations.py  api.py  app.py  charts.py  views.py
src/goetta_finance/web/static/: styles.css
src/goetta_finance/web/templates/: accounts.html  base.html  goals.html  net_worth.html  spending.html  spending_by_category.html  sync_health.html  transactions.html
src/goetta_finance/web/templates/partials/: transactions_table.html
tests/: conftest.py  test_account_cli.py  test_category_cli.py  test_cli.py  test_collector.py  test_config.py  test_curation_tools.py  test_daemon.py  test_daemon_concurrency.py  test_duckdb_store.py  test_goal_cli.py  test_goals.py  test_import_cli.py  test_importer.py  test_lazy_sync_visibility.py  test_mcp_config.py  test_server_e2e.py  test_simplefin.py  test_tools.py  test_transfer_link_cli.py  test_transfer_link_tools.py  test_transfers.py  test_validators.py  test_web_aggregations.py  test_web_api.py  test_web_charts.py  test_web_views.py
tests/fixtures/: README.md  simplefin_demo_response.json
