[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goetta-finance"
version = "0.1.0"
description = "Local-first MCP server that connects SimpleFIN to Claude."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "goetta-finance contributors" }]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "duckdb>=0.10",
    "typer>=0.12",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3",
    "plotly>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
goetta-finance = "goetta_finance.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/goetta_finance"]

[tool.hatch.build.targets.wheel.force-include]
"src/goetta_finance/store/migrations" = "goetta_finance/store/migrations"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/goetta_finance"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
